--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/rkant225/react_redux_setup",
+  "homepage": "http://rkant225.github.io/react_redux_setup",
   "name": "redux_setup",
   "version": "0.1.0",
   "private": true,
